--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "mongoose": "^4.0.5",
-    "morgan": "~1.5.3"
+    "morgan": "~1.5.3",
+    "nodemailer": "^1.3.4"
   }
 }
